Bug fix: mobile nav not showing.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -224,6 +224,7 @@ footer {
     .mobilenav {
         overflow: hidden;
         position: relative;
+        display: block;
     }
 
     /* Hide the links inside the navigation menu (except for logo/home) */
